--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8851688708766894"
      crossorigin="anonymous"></script>
   <meta charset="UTF-8" />
-  <title>Futuros Binance - betabot.store</title>
+  <title>Futuros Binance - betabot.org</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" href="beta.ico" />
 
