--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="pt">
 <head>
   <meta name="google-adsense-account" content="ca-pub-8851688708766894">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8851688708766894"
-     crossorigin="anonymous"></script>
+
   <meta charset="UTF-8" />
-  <title>Futuros Binance - betabot.store</title>
+  <title>Futuros Binance - betabot.org</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" href="beta.ico" />
 
