--- a/index.html
+++ b/index.html
@@ -165,9 +165,8 @@
   <script src="script.js"></script>
 
   <a href="https://t.me/BETABOTROMPIMENTO" target="_blank" class="telegram-float">
-    <img src="https://betabot.store/rastreador/telegram.png" alt="Telegram Icon" style="width: 50px; height: 50px;">
+    <img src="/rastreador/telegram.png" alt="Telegram Icon" style="width: 50px; height: 50px;">
   </a>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8851688708766894"
-     crossorigin="anonymous"></script>
+
 </body>
 </html>
