--- a/tv/index.html
+++ b/tv/index.html
@@ -58,7 +58,7 @@
               src="https://painel-git-main-crewskts-projects.vercel.app/tv/charting_library_clonned_data/charting_library/charting_library.js">
           </script>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js"></script>
-          <script type="module" src=""https://painel-git-main-crewskts-projects.vercel.app/tv/src/main.js"></script>
+          <script type="module" src="https://painel-git-main-crewskts-projects.vercel.app/tv/src/main.js"></script>
       </head>
       <body style="margin:0px; overflow-y: hidden;">
           <div id="tv_chart_container">
