--- a/tv/index.html
+++ b/tv/index.html
@@ -55,7 +55,7 @@
           <title>TradingView Free - Beta bot </title>
           <script
               type="text/javascript"
-              src="/tv/charting_library_clonned_data/charting_library/charting_library.js">
+              src="https://painel-git-main-crewskts-projects.vercel.app/tv/charting_library_clonned_data/charting_library/charting_library.js">
           </script>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js"></script>
           <script type="module" src="src/main.js"></script>
