--- a/tv/index.html
+++ b/tv/index.html
@@ -1,6 +1,6 @@
 <div class="tradingview-widget-container">
     <div class="tradingview-widget-container__widget"></div>
-    <div class="tradingview-widget-copyright"><a href=""https://painel-git-main-crewskts-projects.vercel.app/tv" rel="noopener" target="_blank"><span class="blue-text"></div>
+    <div class="tradingview-widget-copyright"><a href="https://painel-git-main-crewskts-projects.vercel.app/tv" rel="noopener" target="_blank"><span class="blue-text"></div>
     <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
     {
     "symbols": [
