--- a/tv/index.html
+++ b/tv/index.html
@@ -1,3 +1,55 @@
+
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.betabot.store/tv" rel="noopener" target="_blank"><span class="blue-text"></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+  {
+  "symbols": [
+    {
+      "description": "",
+      "proName": "BINANCE:USDTBRL"
+    },
+    {
+      "description": "",
+      "proName": "BINANCE:BTCUSDT.P"
+    },
+    {
+      "description": "",
+      "proName": "BINANCE:ETHUSDT.P"
+    },
+    {
+      "description": "",
+      "proName": "BINANCE:BNBUSDT.P"
+    },
+    {
+      "description": "",
+      "proName": "BINANCE:SOLUSDT.P"
+    },
+    {
+      "description": "",
+      "proName": "BINANCE:ADAUSDT.P"
+    },
+    {
+      "description": "",
+      "proName": "BINANCE:LINKUSDT.P"
+    },
+    {
+      "description": "",
+      "proName": "BINANCE:XRPUSDT.P"
+    }
+  ],
+  "colorTheme": "dark",
+  "isTransparent": false,
+  "displayMode": "adaptive",
+  "locale": "pt"
+}
+  </script>
+</div>
+
+
+
+
+
 <!DOCTYPE HTML>
 <html>  
     <head>
@@ -14,3 +66,29 @@
         </div>
     </body>
 </html>
+
+
+
+
+  <style>
+    /* Estilo para o ícone do Telegram flutuante */
+    .telegram-float {
+      position: fixed;
+      bottom: 20px; /* Ajuste a posição vertical conforme necessário */
+      right: 20px; /* Ajuste a posição horizontal conforme necessário */
+      z-index: 1000; /* Garante que o ícone esteja sempre visível */
+      cursor: pointer;
+      transition: transform 0.10s ease-in-out;
+    }
+
+    .telegram-float:hover {
+      transform: scale(1.1); /* Efeito de escala ao passar o mouse */
+    }
+  </style>
+</head>
+
+ <!-- Ícone flutuante do Telegram -->
+  <a href="https://t.me/suportebetabot" target="_blank" class="telegram-float">
+    <img src="https://betabot.store/rastreador/telegram.png" alt="Telegram Icon" style="width: 50px; height: 50px;">
+  </a>
+</div>
