--- a/tv/index.html
+++ b/tv/index.html
@@ -89,6 +89,6 @@
 
  <!-- Ícone flutuante do Telegram -->
   <a href="https://t.me/suportebetabot" target="_blank" class="telegram-float">
-    <img src="https://betabot.store/rastreador/telegram.png" alt="Telegram Icon" style="width: 50px; height: 50px;">
+    <img src="/telegram.png" alt="Telegram Icon" style="width: 50px; height: 50px;">
   </a>
 </div>
