--- a/spot/index.html
+++ b/spot/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>CryptoSpace</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="shortcut icon" href="./favicon.ico" />
+    <title>BETA BOT SPOT </title>
+    <link rel="stylesheet" href="https://betabot.org/spot/style.css" />
+    <link rel="shortcut icon" href="https://betabot.org/spot/favicon.ico" />
     <script defer src="https://stats.hackhub.buzz/script.js" data-website-id="05d2e030-c420-4ecd-a69e-a2a7bc4c4e94"></script>
   </head>
 
@@ -30,7 +30,7 @@
             <a class="logo-footer" href="javascript:location.reload(true)">
               <img
                 src="https://bitcoin.org/img/icons/logo-footer.svg?1652976465"
-                alt="Bitcoin"
+                alt="BETA BOT "
               />
             </a>
           </div>
@@ -181,6 +181,6 @@
     </div>
     <!-- partial -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="https://betabot.org/spot/script.js"></script>
   </body>
 </html>
