--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  
   <title>Futuros Binance - betabot.org</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" href="beta.ico" />
-
-
 
   <style>
     .telegram-float {
@@ -17,7 +14,6 @@
       cursor: pointer;
       transition: transform 0.20s ease-in-out;
     }
-
     .telegram-float:hover {
       transform: scale(1.1);
     }
@@ -26,28 +22,29 @@
       font-size: 1.2em;
       font-weight: bold;
       color: #FFD700;
-      animation: slide 5s ease-in-out infinite; /* Ajustando a animação para 7 segundos */
+      animation: slide 5s ease-in-out infinite;
       white-space: nowrap;
     }
-
     @keyframes slide {
-      50% {
-        transform: translateX(0%); /* Movendo de 50% da largura para a esquerda */
-      }
-      50% {
-        transform: translateX(-0%); /* Movendo de 50% da largura para a direita */
-      }
+      50% { transform: translateX(0%); }
+      50% { transform: translateX(-0%); }
     }
-
     .logo-footer {
       display: flex;
       align-items: center;
     }
+    .dark-mode {
+      background-color: #121212;
+      color: white;
+    }
+    .favorite-icon {
+      cursor: pointer;
+      color: gold;
+    }
   </style>
 </head>
 
-  
-<body>
+<body :class="{ 'dark-mode': isDarkMode }">
   <div id="app" v-cloak>
     <header class="header-wrap">
       <div class="header-row flex-row flex-middle flex-space">
@@ -58,44 +55,46 @@
           </div>
         </div>
         <div class="text-primary if-medium">
-          <a class="logo-footer" >
+          <a class="logo-footer">
             <img src="./betafuturos.svg" width="200" height="90" alt="Beta Bot Futuros">
             <span v-if="lastListedCoin" class="last-listed-coin">Último Token Listado: {{ lastListedCoin }}</span>
           </a>
         </div>
         <div class="flex-row flex-middle">
+          <button @click="toggleDarkMode">{{ isDarkMode ? 'Modo Claro' : 'Modo Escuro' }}</button>
           <div class="dropdown">
             <div class="form-input text-nowrap shadow-box">▼ {{ limit }}</div>
             <ul>
-              <li @click="setLimit(0)"><span class="text-faded">Show:</span> All</li>
-              <li @click="setLimit(2)"><span class="text-faded">Show:</span> 2</li>
-              <li @click="setLimit(10)"><span class="text-faded">Show:</span> 10</li>
-              <li @click="setLimit(20)"><span class="text-faded">Show:</span> 20</li>
-              <li @click="setLimit(50)"><span class="text-faded">Show:</span> 50</li>
-              <li @click="setLimit(100)"><span class="text-faded">Show:</span> 100</li>
+              <li @click="setLimit(0)">Show: All</li>
+              <li @click="setLimit(2)">Show: 2</li>
+              <li @click="setLimit(10)">Show: 10</li>
+              <li @click="setLimit(20)">Show: 20</li>
+              <li @click="setLimit(50)">Show: 50</li>
+              <li @click="setLimit(100)">Show: 100</li>
             </ul>
           </div>
           <div class="dropdown">
             <div class="form-input text-nowrap shadow-box">▼ {{ sortLabel }}</div>
             <ul>
-              <li @click="sortBy('token', 'asc')"><span class="text-faded"></span> Token</li>
-              <li @click="sortBy('close', 'desc')"><span class="text-faded"></span> Price</li>
-              <li @click="sortBy('assetVolume', 'desc')"><span class="text-faded"></span> Volume</li>
-              <li @click="sortBy('percent', 'desc')"><span class="text-faded"></span> Percent</li>
-              <li @click="sortBy('trades', 'desc')"><span class="text-faded"></span> Trades</li>
-              <li @click="sortBy('longShortRatio', 'asc')"><span class="text-faded"></span> Long/Short</li>
-              <li @click="sortBy('volatility', 'desc')"><span class="text-faded"></span> Volatility</li>
+              <li @click="sortBy('token', 'asc')">Token</li>
+              <li @click="sortBy('close', 'desc')">Price</li>
+              <li @click="sortBy('assetVolume', 'desc')">Volume</li>
+              <li @click="sortBy('percent', 'desc')">Percent</li>
+              <li @click="sortBy('trades', 'desc')">Trades</li>
+              <li @click="sortBy('longShortRatio', 'asc')">Long/Short</li>
+              <li @click="sortBy('volatility', 'desc')">Volatility</li>
             </ul>
           </div>
           <div class="dropdown">
             <div class="form-input text-nowrap shadow-box">▼ {{ asset }}</div>
             <ul>
-              <li @click="filterAsset('USDT')"><span class="text-faded">Asset:</span> USDT</li>
+              <li @click="filterAsset('USDT')">Asset: USDT</li>
             </ul>
           </div>
         </div>
       </div>
     </header>
+
     <main class="main-wrap">
       <div class="main-grid-list">
         <div class="main-grid-item" v-for="c in coinsList" :key="c.symbol" :class="c.style">
@@ -109,34 +108,24 @@
                   <h1 class="text-primary text-clip">
                     {{ c.token }}<small class="text-faded text-small text-condense">/{{ c.asset }}</small>
                   </h1>
-                  <h2 class="text-bright text-clip">
-                    {{ c.close | toFixed(asset) }}
-                  </h2>
-                  <div class="text-clip">
-                    LSR: {{ c.longShortRatio }}
-                  </div>
+                  <h2 class="text-bright text-clip">{{ c.close | toFixed(asset) }}</h2>
+                  <div class="text-clip">LSR: {{ c.longShortRatio }}</div>
                 </div>
                 <div class="text-right">
-                  <div class="color text-big text-clip">
-                    {{ c.arrow }} {{ c.sign }}{{ c.percent | toFixed(2) }}%
-                  </div>
-                  <div class="text-clip">
-                    {{ c.sign }}{{ c.change | toFixed(asset) }} <small class="text-faded">24h</small>
-                  </div>
-                  <div class="text-clip">
-                    {{ c.assetVolume | toMoney }} <small class="text-faded">Vol</small>
-                  </div>
-                  <div class="text-clip">
-                    Volat: {{ c.volatility | toFixed(2) }}%
-                    <span v-if="c.volatility >= 15">🔥</span>
-                    <span v-else>❄️</span>
-                  </div>
+                  <div class="color text-big text-clip">{{ c.arrow }} {{ c.sign }}{{ c.percent | toFixed(2) }}%</div>
+                  <div class="text-clip">{{ c.sign }}{{ c.change | toFixed(asset) }} <small class="text-faded">24h</small></div>
+                  <div class="text-clip">{{ c.assetVolume | toMoney }} <small class="text-faded">Vol</small></div>
+                  <div class="text-clip">Volat: {{ c.volatility | toFixed(2) }}% <span v-if="c.volatility >= 15">🔥</span><span v-else>❄️</span></div>
                 </div>
               </div>
             </div>
           </div>
           <div class="main-grid-chart">
             <linechart :width="380" :height="40" :values="c.history" :volatility="c.volatility"></linechart>
+          </div>
+          <div class="favorite-icon" @click="toggleFavorite(c)">
+            <span v-if="favoriteCoins.includes(c.symbol)">⭐</span>
+            <span v-else>☆</span>
           </div>
         </div>
       </div>
@@ -150,8 +139,7 @@
     </div>
   </div>
 
-   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.16/vue.min.js"></script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.16/vue.min.js"></script>
   <script src="script.js"></script>
 
   <a href="https://t.me/BETABOTROMPIMENTO" target="_blank" class="telegram-float">
