--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   
   <title>Futuros Binance - betabot.org</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="shortcut icon" href="beta.ico" />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="shortcut icon" href="/beta.ico" />
 
 
 
@@ -152,7 +152,7 @@
 
    
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.16/vue.min.js"></script> 
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 
   <a href="https://t.me/BETABOTROMPIMENTO" target="_blank" class="telegram-float">
     <img src="/rastreador/telegram.png" alt="Telegram Icon" style="width: 50px; height: 50px;">
