--- a/index.html
+++ b/index.html
@@ -1,42 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  
   <title>Futuros Binance - betabot.org</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" href="/beta.ico" />
 
-
-
   <style>
+    /* CSS para o botão flutuante do Telegram */
     .telegram-float {
       position: fixed;
-      bottom: 20px;
+      bottom: 80px;
       right: 20px;
       z-index: 1000;
       cursor: pointer;
-      transition: transform 0.20s ease-in-out;
+      transition: transform 0.2s ease-in-out;
     }
-
     .telegram-float:hover {
       transform: scale(1.1);
     }
+
+    /* CSS para o banner premium */
+    .premium-banner {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      z-index: 1000;
+      width: 150px;
+      height: auto;
+      cursor: pointer;
+      opacity: 0.8;
+      transition: opacity 0.2s ease-in-out;
+    }
+    .premium-banner:hover {
+      opacity: 1;
+    }
+
+    /* CSS para animação do último token listado */
     .last-listed-coin {
       margin-left: 10px;
       font-size: 1.2em;
       font-weight: bold;
       color: #FFD700;
-      animation: slide 5s ease-in-out infinite; /* Ajustando a animação para 7 segundos */
+      animation: slide 7s ease-in-out infinite;
       white-space: nowrap;
     }
 
     @keyframes slide {
-      50% {
-        transform: translateX(0%); /* Movendo de 50% da largura para a esquerda */
-      }
-      50% {
-        transform: translateX(-0%); /* Movendo de 50% da largura para a direita */
-      }
+      0%, 100% { transform: translateX(0%); }
+      50% { transform: translateX(-20%); }
     }
 
     .logo-footer {
@@ -46,58 +57,69 @@
   </style>
 </head>
 
-  
 <body>
   <div id="app" v-cloak>
     <header class="header-wrap">
       <div class="header-row flex-row flex-middle flex-space">
+        <!-- Campo de busca -->
         <div class="if-small">
           <div class="form-input dark">
             <div class="push-right">🔎</div>
             <input type="text" v-model="search" placeholder="Buscar TOKEN" />
           </div>
         </div>
+
+        <!-- Logo e último token listado -->
         <div class="text-primary if-medium">
-          <a class="logo-footer" >
+          <a class="logo-footer">
             <img src="./betafuturos.svg" width="200" height="90" alt="Beta Bot Futuros">
             <span v-if="lastListedCoin" class="last-listed-coin">Último Token Listado: {{ lastListedCoin }}</span>
           </a>
         </div>
+
+        <!-- Controles de visualização -->
         <div class="flex-row flex-middle">
+          <!-- Seleção de limite de visualização -->
           <div class="dropdown">
             <div class="form-input text-nowrap shadow-box">▼ {{ limit }}</div>
             <ul>
               <li @click="setLimit(0)"><span class="text-faded">Show:</span> All</li>
-              <li @click="setLimit(2)"><span class="text-faded">Show:</span> 2</li>
-              <li @click="setLimit(10)"><span class="text-faded">Show:</span> 10</li>
-              <li @click="setLimit(20)"><span class="text-faded">Show:</span> 20</li>
-              <li @click="setLimit(50)"><span class="text-faded">Show:</span> 50</li>
-              <li @click="setLimit(100)"><span class="text-faded">Show:</span> 100</li>
+              <li @click="setLimit(2)">2</li>
+              <li @click="setLimit(10)">10</li>
+              <li @click="setLimit(20)">20</li>
+              <li @click="setLimit(50)">50</li>
+              <li @click="setLimit(100)">100</li>
             </ul>
           </div>
+
+          <!-- Opções de classificação -->
           <div class="dropdown">
             <div class="form-input text-nowrap shadow-box">▼ {{ sortLabel }}</div>
             <ul>
-              <li @click="sortBy('token', 'asc')"><span class="text-faded"></span> Token</li>
-              <li @click="sortBy('close', 'desc')"><span class="text-faded"></span> Price</li>
-              <li @click="sortBy('assetVolume', 'desc')"><span class="text-faded"></span> Volume</li>
-              <li @click="sortBy('percent', 'desc')"><span class="text-faded"></span> Percent</li>
-              <li @click="sortBy('trades', 'desc')"><span class="text-faded"></span> Trades</li>
-              <li @click="sortBy('longShortRatio', 'asc')"><span class="text-faded"></span> Long/Short</li>
-              <li @click="sortBy('volatility', 'desc')"><span class="text-faded"></span> Volatility</li>
+              <li @click="sortBy('token', 'asc')">Token</li>
+              <li @click="sortBy('close', 'desc')">Price</li>
+              <li @click="sortBy('assetVolume', 'desc')">Volume</li>
+              <li @click="sortBy('percent', 'desc')">Percent</li>
+              <li @click="sortBy('trades', 'desc')">Trades</li>
+              <li @click="sortBy('longShortRatio', 'asc')">Long/Short</li>
+              <li @click="sortBy('volatility', 'desc')">Volatility</li>
             </ul>
           </div>
+
+          <!-- Filtro de ativo -->
           <div class="dropdown">
             <div class="form-input text-nowrap shadow-box">▼ {{ asset }}</div>
             <ul>
-              <li @click="filterAsset('USDT')"><span class="text-faded">Asset:</span> USDT</li>
+              <li @click="filterAsset('USDT')">USDT</li>
             </ul>
           </div>
         </div>
       </div>
     </header>
+
     <main class="main-wrap">
       <div class="main-grid-list">
+        <!-- Listagem de moedas -->
         <div class="main-grid-item" v-for="c in coinsList" :key="c.symbol" :class="c.style">
           <div class="main-grid-info flex-row flex-top flex-stretch">
             <div class="push-right">
@@ -112,20 +134,14 @@
                   <h2 class="text-bright text-clip">
                     {{ c.close | toFixed(asset) }}
                   </h2>
-                  <div class="text-clip">
-                    LSR: {{ c.longShortRatio }}
-                  </div>
+                  <div class="text-clip">LSR: {{ c.longShortRatio }}</div>
                 </div>
                 <div class="text-right">
                   <div class="color text-big text-clip">
                     {{ c.arrow }} {{ c.sign }}{{ c.percent | toFixed(2) }}%
                   </div>
-                  <div class="text-clip">
-                    {{ c.sign }}{{ c.change | toFixed(asset) }} <small class="text-faded">24h</small>
-                  </div>
-                  <div class="text-clip">
-                    {{ c.assetVolume | toMoney }} <small class="text-faded">Vol</small>
-                  </div>
+                  <div class="text-clip">{{ c.sign }}{{ c.change | toFixed(asset) }} <small class="text-faded">24h</small></div>
+                  <div class="text-clip">{{ c.assetVolume | toMoney }} <small class="text-faded">Vol</small></div>
                   <div class="text-clip">
                     Volat: {{ c.volatility | toFixed(2) }}%
                     <span v-if="c.volatility >= 15">🔥</span>
@@ -150,13 +166,17 @@
     </div>
   </div>
 
-   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.16/vue.min.js"></script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.16/vue.min.js"></script>
   <script src="script.js"></script>
 
+  <!-- Ícone do Telegram flutuante -->
   <a href="https://t.me/BETABOTROMPIMENTO" target="_blank" class="telegram-float">
     <img src="/rastreador/telegram.png" alt="Telegram Icon" style="width: 50px; height: 50px;">
   </a>
 
+  <!-- Banner premium flutuante -->
+  <a href="https://t.me/suportebetabot" target="_blank" class="premium-banner">
+    <img src="/premium.gif" alt="Banner Premium" />
+  </a>
 </body>
 </html>
