--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
   <!-- Banner premium flutuante com animação -->
   <a href="https://t.me/suportebetabot" target="_blank" class="premium-banner">
-    <img src="/premium.gif" alt="Premium" />
+    <img src="/premium.png" alt="Premium" />
   </a>
 </body>
 </html>
