--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
   <!-- Banner premium flutuante com animação -->
   <a href="https://t.me/suportebetabot" target="_blank" class="premium-banner">
-   <!--  <img src="/premium.png" alt="Premium" />-->
+   <img src="/premium.png" alt="Premium" />
   </a>
 </body>
 </html>
