--- a/intro/index.html
+++ b/intro/index.html
@@ -11,13 +11,13 @@
     <link rel="shortcut icon" href="intro/images/favicon.png" type="images/x-icon">
 
     <!-- css include -->
-    <link rel="stylesheet" href="intro/css/bootstrap.min.css">
-    <link rel="stylesheet" href="intro/css/fontawesome.css">
-    <link rel="stylesheet" href="intro/css/animate.css">
-    <link rel="stylesheet" href="intro/css/swiper.min.css">
-    <link rel="stylesheet" href="intro/css/odometer.css">
-    <link rel="stylesheet" href="intro/css/magnific-popup.css">
-    <link rel="stylesheet" href="intro/css/main.css">
+    <link rel="stylesheet" href="https://betabot.org/https://betabot.org/bootstrap.min.css">
+    <link rel="stylesheet" href="https://betabot.org/fontawesome.css">
+    <link rel="stylesheet" href="https://betabot.org/animate.css">
+    <link rel="stylesheet" href="https://betabot.org/swiper.min.css">
+    <link rel="stylesheet" href="https://betabot.org/odometer.css">
+    <link rel="stylesheet" href="https://betabot.org/magnific-popup.css">
+    <link rel="stylesheet" href="https://betabot.org/main.css">
 </head>
 
 <body>
@@ -1248,18 +1248,18 @@
 </div>
 
 <!-- jquery include -->
-<script src="js/jquery-3.7.1.min.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/swiper.min.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/odometer.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/easing.min.js"></script>
-<script src="js/scrollspy.js"></script>
-<script src="js/countdown.js"></script>
-<script src="js/parallax-scroll.js"></script>
-<script src="js/main.js"></script>
+<script src="intro/js/jquery-3.7.1.min.js"></script>
+<script src="intro/js/bootstrap.bundle.min.js"></script>
+<script src="intro/js/swiper.min.js"></script>
+<script src="intro/js/wow.min.js"></script>
+<script src="intro/js/appear.js"></script>
+<script src="intro/js/odometer.min.js"></script>
+<script src="intro/js/jquery.magnific-popup.min.js"></script>
+<script src="intro/js/easing.min.js"></script>
+<script src="intro/js/scrollspy.js"></script>
+<script src="intro/js/countdown.js"></script>
+<script src="intro/js/parallax-scroll.js"></script>
+<script src="intro/js/main.js"></script>
 
 
 
