--- a/intro/index.html
+++ b/intro/index.html
@@ -6,18 +6,18 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Beta Bot: Acompanhe as Principais Moedas em Tempo Real </title>
+    <title>Cryco - ICO &amp; Crypto Landing HTML Template</title>
 
-    <link rel="shortcut icon" href="intro/images/favicon.png" type="images/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="images/x-icon">
 
     <!-- css include -->
-    <link rel="stylesheet" href="https://betabot.org/https://betabot.org/bootstrap.min.css">
-    <link rel="stylesheet" href="https://betabot.org/fontawesome.css">
-    <link rel="stylesheet" href="https://betabot.org/animate.css">
-    <link rel="stylesheet" href="https://betabot.org/swiper.min.css">
-    <link rel="stylesheet" href="https://betabot.org/odometer.css">
-    <link rel="stylesheet" href="https://betabot.org/magnific-popup.css">
-    <link rel="stylesheet" href="https://betabot.org/main.css">
+    <link rel="stylesheet" href="https://betabot.org/intro/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://betabot.org/intro/css/fontawesome.css">
+    <link rel="stylesheet" href="https://betabot.org/intro/css/animate.css">
+    <link rel="stylesheet" href="https://betabot.org/intro/css/swiper.min.css">
+    <link rel="stylesheet" href="https://betabot.org/intro/css/odometer.css">
+    <link rel="stylesheet" href="https://betabot.org/intro/css/magnific-popup.css">
+    <link rel="stylesheet" href="https://betabot.org/intro/css/main.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="header__wrap ul_li_between">
                     <div class="header-logo">
-                        <a href="index.html"><img src="intro/images/Logo.svg" alt=""></a>
+                        <a href="index.html"><img src="images/Logo.svg" alt=""></a>
                     </div>
                     <div class="main-menu__wrap ul_li navbar navbar-expand-lg">
                         <nav class="main-menu collapse navbar-collapse">
@@ -90,7 +90,7 @@
                                 <div class="xb-header-menu-scroll">
                                     <div class="xb-menu-close xb-hide-xl xb-close"></div>
                                     <div class="xb-logo-mobile xb-hide-xl">
-                                        <a href="index.html" rel="home"><img src="intro/assets/img/logo/logo.svg" alt=""></a></div>
+                                        <a href="index.html" rel="home"><img src="assets/img/logo/logo.svg" alt=""></a></div>
                                     <div class="xb-header-mobile-search xb-hide-xl">
                                         <form role="search" action="#">
                                             <input type="text" placeholder="Search..." name="s" class="search-field">
@@ -149,22 +149,22 @@
         <section class="hero bg_img pos-rel pt-120" data-background="assets/img/bg/hero-bg1.svg">
             <div class="hero-shape">
                 <div class="shape--1">
-                    <img class="leftToRight" src="intro/images/hero-sp_01.svg" alt="">
+                    <img class="leftToRight" src="images/hero-sp_01.svg" alt="">
                 </div>
                 <div class="shape--2">
-                    <img class="topToBottom" src="intro/images/hero-sp_02.svg" alt="">
+                    <img class="topToBottom" src="images/hero-sp_02.svg" alt="">
                 </div>
                 <div class="shape--3">
-                    <img class="leftToRight" src="intro/images/hero-sp_04.svg" alt="">
+                    <img class="leftToRight" src="images/hero-sp_04.svg" alt="">
                 </div>
                 <div class="shape--4">
-                    <img class="topToBottom" src="intro/images/hero-sp_03.svg" alt="">
+                    <img class="topToBottom" src="images/hero-sp_03.svg" alt="">
                 </div>
                 <div class="shape--5">
-                    <img class="topToBottom" src="intro/images/hero-sp_05.svg" alt="">
+                    <img class="topToBottom" src="images/hero-sp_05.svg" alt="">
                 </div>
                 <div class="shape--6">
-                    <img class="leftToRight" src="intro/images/hero-sp_06.svg" alt="">
+                    <img class="leftToRight" src="images/hero-sp_06.svg" alt="">
                 </div>
             </div>
             <div class="container">
@@ -203,10 +203,10 @@
                                 <div class="xb-item--accept">
                                     <h5 class="xb-item--acc-title">We accept :</h5>
                                     <ul class="xb-item--list ul_li">
-                                        <li><img src="intro/images/hero-icon01.svg" alt="">Bitcoin</li>
-                                        <li><img src="intro/images/hero-icon02.svg" alt="">Ethereum</li>
-                                        <li><img src="intro/images/hero-icon03.svg" alt="">Litecoin</li>
-                                        <li><img src="intro/images/hero-icon04.svg" alt="">Ripple</li>
+                                        <li><img src="images/hero-icon01.svg" alt="">Bitcoin</li>
+                                        <li><img src="images/hero-icon02.svg" alt="">Ethereum</li>
+                                        <li><img src="images/hero-icon03.svg" alt="">Litecoin</li>
+                                        <li><img src="images/hero-icon04.svg" alt="">Ripple</li>
                                     </ul>
                                 </div>
                             </div>
@@ -249,14 +249,14 @@
         <!-- partners section start  -->
         <section class="partners z-3 pt-135">
             <div class="patners-title text-center">
-                <span><img src="intro/images/partner_07.png" alt=""> our top partners <img src="images/partner_08.png" alt=""></span>
+                <span><img src="images/partner_07.png" alt=""> our top partners <img src="images/partner_08.png" alt=""></span>
             </div>
             <div class="partner-active partner-slider ul_li"> 
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="xb-item--brand">
                             <div class="xb-item--brand_logo">
-                                <img src="intro/images/partner_01.png" alt="">
+                                <img src="images/partner_01.png" alt="">
                             </div>
                             <span>aptos</span>
                         </div>
@@ -264,7 +264,7 @@
                     <div class="swiper-slide">
                         <div class="xb-item--brand">
                             <div class="xb-item--brand_logo">
-                                <img src="intro/images/partner_02.png" alt="">
+                                <img src="images/partner_02.png" alt="">
                             </div>
                             <span>algorand</span>
                         </div>
@@ -272,7 +272,7 @@
                     <div class="swiper-slide">
                         <div class="xb-item--brand">
                             <div class="xb-item--brand_logo">
-                                <img src="intro/images/partner_03.png" alt="">
+                                <img src="images/partner_03.png" alt="">
                             </div>
                             <span>binance</span>
                         </div>
@@ -280,7 +280,7 @@
                     <div class="swiper-slide">
                         <div class="xb-item--brand">
                             <div class="xb-item--brand_logo">
-                                <img src="intro/images/partner_04.png" alt="">
+                                <img src="images/partner_04.png" alt="">
                             </div>
                             <span>cardano</span>
                         </div>
@@ -288,7 +288,7 @@
                     <div class="swiper-slide">
                         <div class="xb-item--brand">
                             <div class="xb-item--brand_logo">
-                                <img src="intro/images/partner_05.png" alt="">
+                                <img src="images/partner_05.png" alt="">
                             </div>
                             <span>ethereum</span>
                         </div>
@@ -296,7 +296,7 @@
                     <div class="swiper-slide">
                         <div class="xb-item--brand">
                             <div class="xb-item--brand_logo">
-                                <img src="intro/images/partner_06.png" alt="">
+                                <img src="images/partner_06.png" alt="">
                             </div>
                             <span>Arbitrum</span>
                         </div>
@@ -304,7 +304,7 @@
                     <div class="swiper-slide">
                         <div class="xb-item--brand">
                             <div class="xb-item--brand_logo">
-                                <img src="intro/images/partner_01.png" alt="">
+                                <img src="images/partner_01.png" alt="">
                             </div>
                             <span>aptos</span>
                         </div>
@@ -1248,18 +1248,18 @@
 </div>
 
 <!-- jquery include -->
-<script src="intro/js/jquery-3.7.1.min.js"></script>
-<script src="intro/js/bootstrap.bundle.min.js"></script>
-<script src="intro/js/swiper.min.js"></script>
-<script src="intro/js/wow.min.js"></script>
-<script src="intro/js/appear.js"></script>
-<script src="intro/js/odometer.min.js"></script>
-<script src="intro/js/jquery.magnific-popup.min.js"></script>
-<script src="intro/js/easing.min.js"></script>
-<script src="intro/js/scrollspy.js"></script>
-<script src="intro/js/countdown.js"></script>
-<script src="intro/js/parallax-scroll.js"></script>
-<script src="intro/js/main.js"></script>
+<script src="ttps://betabot.org/intro/js/jquery-3.7.1.min.js"></script>
+<script src="https://betabot.org/intro/js/bootstrap.bundle.min.js"></script>
+<script src="https://betabot.org/intro/js/swiper.min.js"></script>
+<script src="https://betabot.org/intro/js/wow.min.js"></script>
+<script src="https://betabot.org/intro/js/appear.js"></script>
+<script src="https://betabot.org/intro/js/odometer.min.js"></script>
+<script src="https://betabot.org/intro/js/jquery.magnific-popup.min.js"></script>
+<script src="https://betabot.org/intro/js/easing.min.js"></script>
+<script src="https://betabot.org/intro/js/scrollspy.js"></script>
+<script src="https://betabot.org/intro/js/countdown.js"></script>
+<script src="https://betabot.org/intro/js/parallax-scroll.js"></script>
+<script src="https://betabot.org/intro/js/main.js"></script>
 
 
 
