--- a/intro/index.html
+++ b/intro/index.html
@@ -11,13 +11,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&amp;family=Public+Sans:wght@500;600;700;800&amp;display=swap" rel="stylesheet">
   <!-- End google font  -->
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/fontawesome.css">
-  <link rel="stylesheet" href="css/slick.css">
-  <link rel="stylesheet" href="css/magnific-popup.css">
-  <link rel="stylesheet" href="css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="css/icomoon-font.css">
-  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="https://betabot.org/intro/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://betabot.org/intro/css/fontawesome.css">
+  <link rel="stylesheet" href="https://betabot.org/intro/css/slick.css">
+  <link rel="stylesheet" href="https://betabot.org/intro/css/magnific-popup.css">
+  <link rel="stylesheet" href="https://betabot.org/intro/css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="https://betabot.org/intro/css/icomoon-font.css">
+  <link rel="stylesheet" href="https://betabot.org/intro/css/animate.css">
 
 
   <!-- Code Editor  -->
