--- a/intro/index.html
+++ b/intro/index.html
@@ -22,8 +22,8 @@
 
   <!-- Code Editor  -->
 
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/app.min.css">
+  <link rel="stylesheet" href="https://betabot.org/intro/css/main.css">
+  <link rel="stylesheet" href="https://betabot.org/intro/css/app.min.css">
 </head>
 
 <body class="light">
@@ -36,7 +36,7 @@
         <!-- Brand Logo-->
         <div class="brand-logo">
           <a href="/">
-            <img src="images/logo-black.svg" alt="" class="light-version-logo">
+            <img src="https://betabot.org/intro/images/logo-black.svg" alt="" class="light-version-logo">
           </a>
         </div>
         <div class="menu-block-wrapper">
@@ -368,11 +368,11 @@
               <div class="fugu-hero-client-rating">
                 <h3>4.8/5</h3>
                 <ul>
-                  <li><img src="images/star1.svg" alt=""></li>
-                  <li><img src="images/star1.svg" alt=""></li>
-                  <li><img src="images/star1.svg" alt=""></li>
-                  <li><img src="images/star1.svg" alt=""></li>
-                  <li><img src="images/star2.svg" alt=""></li>
+                  <li><img src="https://betabot.org/intro/images/star1.svg" alt=""></li>
+                  <li><img src="https://betabot.org/intro/images/star1.svg" alt=""></li>
+                  <li><img src="https://betabot.org/intro/images/star1.svg" alt=""></li>
+                  <li><img src="https://betabot.org/intro/images/star1.svg" alt=""></li>
+                  <li><img src="https://betabot.org/intro/images/star2.svg" alt=""></li>
                   <li>Rating</li>
                 </ul>
               </div>
@@ -847,17 +847,17 @@
   </div>
 
   <!-- scripts -->
-  <script src="js/jquery-3.6.0.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/menu.js"></script>
-  <script src="js/slick.js"></script>
-  <script src="js/isotope.pkgd.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/swiper-bundle.min.js"></script>
-  <script src="js/countdown.js"></script>
-  <script src="js/wow.min.js"></script>
+  <script src="https://betabot.org/intro/js/jquery-3.6.0.min.js"></script>
+  <script src="https://betabot.org/intro/js/bootstrap.bundle.min.js"></script>
+  <script src="https://betabot.org/intro/js/menu.js"></script>
+  <script src="https://betabot.org/intro/js/slick.js"></script>
+  <script src="https://betabot.org/intro/js/isotope.pkgd.min.js"></script>
+  <script src="https://betabot.org/intro/js/jquery.magnific-popup.min.js"></script>
+  <script src="https://betabot.org/intro/js/swiper-bundle.min.js"></script>
+  <script src="https://betabot.org/intro/js/countdown.js"></script>
+  <script src="https://betabot.org/intro/js/wow.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3&amp;key=AIzaSyArZVfNvjnLNwJZlLJKuOiWHZ6vtQzzb1Y"></script>
 
-  <script src="js/app.js"></script>
+  <script src="https://betabot.org/intro/js/app.js"></script>
 
 </body></html>
