--- a/intro/index.html
+++ b/intro/index.html
@@ -108,13 +108,13 @@
                     <a href="#" data-menu-get="h3" class="drop-trigger">blog dark <i class="fas fa-angle-down"></i></a>
                     <ul class="sub-menu shape-none" id="submenu-5">
                       <li class="sub-menu--item">
-                        <a href="/blog-dark">blog dark</a>
+                        <a href="https://betabot.org/intro/blog-dark">blog dark</a>
                       </li>
                       <li class="sub-menu--item">
-                        <a href="/blog-dark-sidebar">blog dark sidebar</a>
+                        <a href="https://betabot.org/intro/blog-dark-sidebar">blog dark sidebar</a>
                       </li>
                       <li class="sub-menu--item">
-                        <a href="/single-dark-blog">blog dark details</a>
+                        <a href="https://betabot.org/intro/single-dark-blog">blog dark details</a>
                       </li>
                     </ul>
                   </li>
@@ -352,13 +352,13 @@
             <h1 class="wow fadeInUpX" data-wow-delay="0s">The crypto trading app for the next-gen</h1>
             <p class="wow fadeInUpX" data-wow-delay="0.25s">Fugu is the app that gives you access to trading tools that you can actively buy &amp; sell digital currencies in an optimal way.</p>
             <div class="fugu-app-btn-wrap wow fadeInUpX" data-wow-delay="0.40s">
-              <a class="fugu-app-btn" href="/contact"><img src="images/app-store.png" alt=""></a>
-              <a class="fugu-app-btn" href="/contact"><img src="images/play-store.png" alt=""></a>
+              <a class="fugu-app-btn" href="/contact"><img src="https://betabot.org/intro/images/app-store.png" alt=""></a>
+              <a class="fugu-app-btn" href="/contact"><img src="https://betabot.org/intro/images/play-store.png" alt=""></a>
             </div>
             <div class="fugu-hero-client-area wow fadeInUpX" data-wow-delay="0.50s">
               <div class="fugu-hero-client-wrap">
                 <div class="fugu-hero-client-thumb">
-                  <img src="images/client.png" alt="">
+                  <img src="https://betabot.org/intro/images/client.png" alt="">
                 </div>
                 <div class="fugu-hero-client-data">
                   <h3>64,739</h3>
