--- a/intro/index.html
+++ b/intro/index.html
@@ -381,19 +381,19 @@
         </div>
         <div class="col-xl-6 col-lg-5">
           <div class="fugu-hero-thumb">
-            <img src="images/hand-mocup.png" alt="">
+            <img src="https://betabot.org/intro/images/hand-mocup.png" alt="">
             <div class="fugu-shape2">
-              <img src="images/shape2.png" alt="">
+              <img src="https://betabot.org/intro/images/shape2.png" alt="">
             </div>
             <div class="fugu-hero-star">
-              <img src="images/star-shape.png" alt="">
+              <img src="https://betabot.org/intro/images/star-shape.png" alt="">
             </div>
           </div>
         </div>
       </div>
     </div>
     <div class="fugu-shape1">
-      <img src="images/shape1.png" alt="">
+      <img src="https://betabot.org/intro/images/shape1.png" alt="">
     </div>
   </div>
   <!-- End hero section -->
@@ -405,34 +405,34 @@
       </div>
       <div class="fugu-client-slider">
         <div class="fugu-brand-logo">
-          <img src="images/client1.png" alt="">
+          <img src="https://betabot.org/intro/images/client1.png" alt="">
         </div>
         <div class="fugu-brand-logo">
-          <img src="images/client2.png" alt="">
+          <img src="https://betabot.org/intro/images/client2.png" alt="">
         </div>
         <div class="fugu-brand-logo">
-          <img src="images/client3.png" alt="">
+          <img src="https://betabot.org/intro/images/client3.png" alt="">
         </div>
         <div class="fugu-brand-logo">
-          <img src="images/client4.png" alt="">
+          <img src="https://betabot.org/intro/images/client4.png" alt="">
         </div>
         <div class="fugu-brand-logo">
-          <img src="images/client5.png" alt="">
+          <img src="https://betabot.org/intro/images/client5.png" alt="">
         </div>
         <div class="fugu-brand-logo">
-          <img src="images/client1.png" alt="">
+          <img src="https://betabot.org/intro/images/client1.png" alt="">
         </div>
         <div class="fugu-brand-logo">
-          <img src="images/client2.png" alt="">
+          <img src="https://betabot.org/intro/images/client2.png" alt="">
         </div>
         <div class="fugu-brand-logo">
-          <img src="images/client3.png" alt="">
+          <img src="https://betabot.org/intro/images/client3.png" alt="">
         </div>
         <div class="fugu-brand-logo">
-          <img src="images/client4.png" alt="">
+          <img src="https://betabot.org/intro/images/client4.png" alt="">
         </div>
         <div class="fugu-brand-logo">
-          <img src="images/client5.png" alt="">
+          <img src="https://betabot.org/intro/images/client5.png" alt="">
         </div>
       </div>
     </div>
