--- a/intro/index.html
+++ b/intro/index.html
@@ -448,48 +448,48 @@
         <div class="col-lg-6">
           <div class="fugu-iconbox-wrap wow fadeInUpX" data-wow-delay="0s">
             <div class="fugu-iconbox-icon">
-              <img src="images/icon1.png" alt="">
+              <img src="https://betabot.org/intro/images/icon1.png" alt="">
             </div>
             <div class="fugu-iconbox-data">
               <h4>Industry-leading security</h4>
               <p>Security tokens are digital assets that represent &amp; transferred ownership rights to a blockchain token.</p>
-              <a class="fugu-icon-btn" href="">Discover More <img src="images/arrow-black-right.svg" alt=""></a>
+              <a class="fugu-icon-btn" href="">Discover More <img src="https://betabot.org/intro/images/arrow-black-right.svg" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="fugu-iconbox-wrap wow fadeInUpX" data-wow-delay=".20s">
             <div class="fugu-iconbox-icon">
-              <img src="images/icon2.png" alt="">
+              <img src="https://betabot.org/intro/images/icon2.png" alt="">
             </div>
             <div class="fugu-iconbox-data">
               <h4>Ownership over your coins</h4>
               <p>The most reliable way to prove ownership of crypto currencies is to sign a specified message with a key.</p>
-              <a class="fugu-icon-btn" href="">Discover More <img src="images/arrow-black-right.svg" alt=""></a>
+              <a class="fugu-icon-btn" href="">Discover More <img src="https://betabot.org/intro/images/arrow-black-right.svg" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="fugu-iconbox-wrap wow fadeInUpX" data-wow-delay=".30s">
             <div class="fugu-iconbox-icon">
-              <img src="images/icon3.png" alt="">
+              <img src="https://betabot.org/intro/images/icon3.png" alt="">
             </div>
             <div class="fugu-iconbox-data">
               <h4>Cold storage for most users</h4>
               <p>A cold wallet, otherwise known as a hardware wallet cold storage, is a physical device that keeps offline.</p>
-              <a class="fugu-icon-btn" href="">Discover More <img src="images/arrow-black-right.svg" alt=""></a>
+              <a class="fugu-icon-btn" href="">Discover More <img src="https://betabot.org/intro/images/arrow-black-right.svg" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="fugu-iconbox-wrap wow fadeInUpX" data-wow-delay=".40s">
             <div class="fugu-iconbox-icon">
-              <img src="images/icon4.png" alt="">
+              <img src="https://betabot.org/intro/images/icon4.png" alt="">
             </div>
             <div class="fugu-iconbox-data">
               <h4>Crime insurance against theft</h4>
               <p>Crime insurance protects a company from loss of money, securities, inventory from fraud events.</p>
-              <a class="fugu-icon-btn" href="">Discover More <img src="images/arrow-black-right.svg" alt=""></a>
+              <a class="fugu-icon-btn" href="">Discover More <img src="https://betabot.org/intro/images/arrow-black-right.svg" alt=""></a>
             </div>
           </div>
         </div>
@@ -503,7 +503,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="fugu-apps-thumb" id="rotatetwo">
-            <img class="wow fadeInUpX" data-wow-delay=".10s" src="images/mocup1.png" alt="">
+            <img class="wow fadeInUpX" data-wow-delay=".10s" src="https://betabot.org/intro/images/mocup1.png" alt="">
           </div>
         </div>
         <div class="col-lg-6 col-md-10 d-flex align-items-center">
@@ -519,7 +519,7 @@
       </div>
     </div>
     <div class="fugu-shape3">
-      <img src="images/shape2.png" alt="">
+      <img src="https://betabot.org/intro/images/shape2.png" alt="">
     </div>
   </div>
   <!-- End section -->
