--- a/intro/index.html
+++ b/intro/index.html
@@ -737,7 +737,7 @@
         </div>
         <div class="col-lg-6 d-flex align-items-center">
           <div class="fugu-cta-app-btn-wrap">
-            <a class="fugu-app-btn wow fadeInUpX" data-wow-delay="0s" href="/contact"><img src="images/app-store.png" alt=""></a>
+            <a class="fugu-app-btn wow fadeInUpX" data-wow-delay="0s" href="/contact"><img src="images/futuros.png" alt=""></a>
             <a class="fugu-app-btn wow fadeInUpX" data-wow-delay=".20s" href="/contact"><img src="images/play-store.png" alt=""></a>
           </div>
         </div>
