--- a/intro/index.html
+++ b/intro/index.html
@@ -353,7 +353,7 @@
             <p class="wow fadeInUpX" data-wow-delay="0.25s">Fugu is the app that gives you access to trading tools that you can actively buy &amp; sell digital currencies in an optimal way.</p>
             <div class="fugu-app-btn-wrap wow fadeInUpX" data-wow-delay="0.40s">
               <a class="fugu-app-btn" href="/contact"><img src="https://betabot.org/intro/images/futuros.png" alt=""></a>
-              <a class="fugu-app-btn" href="/contact"><img src="https://betabot.org/intro/images/play-store.png" alt=""></a>
+              <a class="fugu-app-btn" href="/contact"><img src="https://betabot.org/intro/images/spot.png" alt=""></a>
             </div>
             <div class="fugu-hero-client-area wow fadeInUpX" data-wow-delay="0.50s">
               <div class="fugu-hero-client-wrap">
