--- a/intro/index.html
+++ b/intro/index.html
@@ -386,7 +386,7 @@
               <img src="https://betabot.org/intro/images/shape2.png" alt="">
             </div>
             <div class="fugu-hero-star">
-              <img src="https://betabot.org/intro/images/star-shape.png" alt="">
+              <!--<img src="https://betabot.org/intro/images/star-shape.png" alt="">-->
             </div>
           </div>
         </div>
