--- a/intro/index.html
+++ b/intro/index.html
@@ -349,8 +349,8 @@
       <div class="row">
         <div class="col-xl-6 col-lg-7">
           <div class="fugu-hero-content">
-            <h1 class="wow fadeInUpX" data-wow-delay="0s">The crypto trading app for the next-gen</h1>
-            <p class="wow fadeInUpX" data-wow-delay="0.25s">Fugu is the app that gives you access to trading tools that you can actively buy &amp; sell digital currencies in an optimal way.</p>
+            <h1 class="wow fadeInUpX" data-wow-delay="0s">Explore o painel BetaCripto e descubra</h1>
+            <p class="wow fadeInUpX" data-wow-delay="0.25s"> oportunidades incríveis no dinâmico universo das criptomoedas</p>
             <div class="fugu-app-btn-wrap wow fadeInUpX" data-wow-delay="0.40s">
               <a class="fugu-app-btn" href="/contact"><img src="https://betabot.org/intro/images/futuros.png" alt=""></a>
               <a class="fugu-app-btn" href="/contact"><img src="https://betabot.org/intro/images/spot.png" alt=""></a>
