--- a/intro/index.html
+++ b/intro/index.html
@@ -738,7 +738,7 @@
         <div class="col-lg-6 d-flex align-items-center">
           <div class="fugu-cta-app-btn-wrap">
             <a class="fugu-app-btn wow fadeInUpX" data-wow-delay="0s" href="/contact"><img src="images/futuros.png" alt=""></a>
-            <a class="fugu-app-btn wow fadeInUpX" data-wow-delay=".20s" href="/contact"><img src="images/play-store.png" alt=""></a>
+            <a class="fugu-app-btn wow fadeInUpX" data-wow-delay=".20s" href="/contact"><img src="https://betabot.org/intro/images/play-store.png" alt=""></a>
           </div>
         </div>
       </div>
