--- a/intro/index.html
+++ b/intro/index.html
@@ -349,7 +349,7 @@
       <div class="row">
         <div class="col-xl-6 col-lg-7">
           <div class="fugu-hero-content">
-            <h1 class="wow fadeInUpX" data-wow-delay="0s">Explore o painel BetaCripto e descubra</h1>
+            <h1 class="wow fadeInUpX" data-wow-delay="0s">EXPLORE O PAINAL BETACRIPTO E DESCUBRA</h1>
             <p class="wow fadeInUpX" data-wow-delay="0.25s"> oportunidades incríveis no dinâmico universo das criptomoedas</p>
             <div class="fugu-app-btn-wrap wow fadeInUpX" data-wow-delay="0.40s">
               <a class="fugu-app-btn" href="/contact"><img src="https://betabot.org/intro/images/futuros.png" alt=""></a>
