--- a/intro/index.html
+++ b/intro/index.html
@@ -36,7 +36,7 @@
         <!-- Brand Logo-->
         <div class="brand-logo">
           <a href="/">
-            <img src="https://betabot.org/intro/images/logo.png" alt="" class="light-version-logo">
+            <img src="https://betabot.org/intro/images/logo.svg" alt="" class="light-version-logo">
           </a>
         </div>
         <div class="menu-block-wrapper">
