--- a/intro/index.html
+++ b/intro/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="https://betabot.org/intro/css/app.min.css">
 </head>
 
-<body class="light">
+<body class="black">
 
 
 
