--- a/spot/index.html
+++ b/spot/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>BETA BOT SPOT </title>
+    <title>Spot Binance - betabot.org</title>
     <link rel="stylesheet" href="https://betabot.org/spot/style.css" />
     <link rel="shortcut icon" href="https://betabot.org/spot/favicon.ico" />
     <script defer src="https://stats.hackhub.buzz/script.js" data-website-id="05d2e030-c420-4ecd-a69e-a2a7bc4c4e94"></script>
@@ -171,5 +171,9 @@
     <!-- partial -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
     <script src="https://betabot.org/spot/script.js"></script>
+
+      <!-- Banner premium flutuante com animação -->
+  <a href="https://t.me/suportebetabot" target="_blank" class="premium-banner">
+    <img src="/premium.png" alt="Premium" />
   </body>
 </html>
